========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-09-17

  - Added bean-difference script, used to reconcile transactions in multiple
    files after a long trip.


2017-09-06

  - Added ABS() implementation to SQL shell for Position and Inventory types.
    See https://groups.google.com/d/msg/beancount/0i4w98LmS6E/JJGOKSB8CQAJ


2017-08-08

  - Accept account name components as numbers only. The grammar safely supports
    this because of the leading semi-colon, all the tests pass, and everything
    runs on my own very large input files.

  - Fixed a failing test with MIME mis-categorization which occurred under
    Ubuntu.


2017-07-25

  - Fixed #181: Support underscores in Python module names for price sources
    (thanks to Stephan Mueller for reporting).


2017-07-23

  - Fixed #179: Scientific notation should never appear in rendered output.


2017-07-02

  - Fixed minor bug with rendering postings with missing numbers.


2017-07-06

  - More changes on #173: use a stringify two-level macro in order to place the
    parser source hash as a string in the source file. Hopefully this should
    also work under MSDEV.


2017-07-05

  - Fixed #173: Added a potential fix for building under MSDEV. Thanks to Alan
    Ray for pointing out a method to build with MSDEV under Windows.


2017-06-25

  - Fixed a minor bug in the tolerance inference code that wouldn't accept a
    posting with a missing number only, e.g. Assets:Checking  USD @ 1.32 CAD.

  - Added a "--no-colon" option to both bean-web and bean-bake in order to
    support Windows filesystems which do not allow colons in filenames.


2017-06-22

  - Added --numberify option to bean-query, which for CSV output will remove the
    currencies of any Amount column. This is great for then uploading to a
    spreadsheet.


2017-05-28

  - Merged patch from Felix Eckhofer that adds an option to bean-format to make